src/chat.css
.form_f75fb0 {
    border-top: 1px solid var(--border-muted) !important;
    border-color: var(--app-frame-border) !important;
}

.channelTextArea_f75fb0, /* text input */
.scrollableContainer__74017, /* text input */
[data-list-item-id^="members-"] /* guild member name */ {
    background: transparent !important;
}

.channelTextArea_f75fb0 { /* text input */
    border: none;
    margin: 0;
}

.title_f75fb0, /* Chat Header */
.searchBar_c322aa, /* Title bar search */
.container_c8ffbb, .members_c8ffbb /* Server Members */ {
    background: var(--panel-rgb) !important;
}

.chat_f75fb0[data-has-border=true] {
    border: 0 !important;
}

.scroller__36d07 { /* Chat wrapper */
    bottom: 15px;
}

.scrollerSpacer__36d07 { /* Space between text box and chat */
    height: 28px;
}

